--- a/index.html
+++ b/index.html
@@ -351,12 +351,13 @@
     13 command 'cd'- chahge directory: 'cd FPA'
     14 GIThOW TO*****
 
-    15 SAVE:
+    15 SAVE  and check results:
     git add . +enter
     git status
-    git add.
+    git add . +enter
     git status
-
+    git commit -m'added start project'
+    git commit -am'update index.js' whrer 'a' - add .
     
     
 
