--- a/index.html
+++ b/index.html
@@ -356,9 +356,10 @@
     git status
     git add . +enter
     git status
-    git commit -m'added start project'
-    git commit -am'update index.js' whrer 'a' - add .
-    
+    git commit -m'added start project' для добавления новых файлов  
+    git commit -am'update index.js' whrer 'a' - add . если появятся новые файлы, то это не сработает только при зменении кода
+
+
     
 
 
